cabal-version: >=1.10
name: reflex-ghci
version: 0.1.4.0
synopsis: A GHCi widget library for use in reflex applications
description:
  Run GHCi from within a reflex application and interact with it using a functional-reactive interface.
  .
  <<https://i.imgur.com/5y61Qx7.png>>
  .
bug-reports: https://github.com/reflex-frp/reflex-ghci/issues
license: BSD3
license-file: LICENSE
author: Obsidian Systems LLC
maintainer: maintainer@obsidian.systems
copyright: 2020 Obsidian Systems LLC
category: FRP, Development,
build-type: Simple
extra-source-files: ChangeLog.md
                    README.md
                    screenshot.png
tested-with: GHC ==8.6.5

library
  exposed-modules:
    Reflex.Process.GHCi
    Reflex.Vty.GHCi
  build-depends:
      base >= 4.12 && < 4.13
    , bytestring >= 0.10 && < 0.11
    , directory >= 1.3 && < 1.4
    , filepath >= 1.4 && < 1.5
    , fsnotify >= 0.3 && < 0.4
    , process >= 1.6 && < 1.7
    , reflex >= 0.6.3 && < 0.7
    , reflex-fsnotify >= 0.2 && < 0.3
    , reflex-process >= 0.2.1 && < 0.3
    , regex-tdfa >= 1.2.3 && < 1.3
    , reflex-vty >= 0.1.3 && < 0.2
    , text >= 1.2 && < 1.3
    , unix >= 2.7 && < 2.8
    , vty >= 5.25 && < 5.26
  hs-source-dirs: src
  default-language: Haskell2010
  ghc-options: -Wall

executable reflex-ghci
  hs-source-dirs: src-bin
  main-is: ghci.hs
  build-depends:
      base
    , optparse-applicative >= 0.14.0 && < 0.16
    , process
    , reflex
    , reflex-ghci
    , reflex-vty
    , reflex-process
    , text
    , vty
  other-modules: Paths_reflex_ghci
  ghc-options: -threaded -rtsopts
  default-language: Haskell2010

test-suite test
  type: exitcode-stdio-1.0
  main-is: test.hs
  hs-source-dirs: tests
  build-depends:
      base
    , bytestring
    , dependent-sum >= 0.6 && < 0.7
    , directory
    , mtl >= 2.2 && < 2.3
    , primitive >= 0.6.4 && < 0.7
    , process
    , ref-tf >= 0.4 && < 0.5
    , reflex
    , reflex-ghci
    , reflex-process
    , reflex-vty
    , temporary >= 1.3 && < 1.4
    , text
  other-modules: HeadlessHost
  ghc-options: -threaded -rtsopts
  default-language: Haskell2010

source-repository head
  type: git
  location: https://github.com/reflex-frp/reflex-ghci
