cabal-version: 2.4
name: reflex-ghci
version: 0.2.0.1
synopsis: A GHCi widget library for use in reflex applications
description:
  Run GHCi from within a Reflex FRP (<https://reflex-frp.org>) application and interact with it using a functional reactive interface.
  .
  <<https://i.imgur.com/5y61Qx7.png>>
bug-reports: https://github.com/reflex-frp/reflex-ghci/issues
license: BSD-3-Clause
license-file: LICENSE
author: Obsidian Systems LLC
maintainer: maintainer@obsidian.systems
copyright: 2020 Obsidian Systems LLC
category: FRP, Development,
build-type: Simple
extra-source-files: ChangeLog.md
                    README.md
                    tests/**/*.hs
                    tests/**/*.cabal
tested-with: GHC ==8.6.5 || ==8.8.4 || ==9.6.1

library
  exposed-modules:
    Reflex.Process.GHCi
    Reflex.Process.Repl
    Reflex.Vty.GHCi
  build-depends:
      base >= 4.12 && < 4.19
    , bytestring >= 0.10 && < 0.12
    , containers >= 0.6 && < 0.7
    , directory >= 1.3 && < 1.4
    , filepath >= 1.4 && < 1.5
    , fsnotify >= 0.4 && < 0.5
    , process >= 1.6 && < 1.7
    , reflex >= 0.7.1.0 && < 1
    , reflex-fsnotify >= 0.3 && < 0.4
    , reflex-process >= 0.3.2 && < 0.4
    , regex-tdfa >= 1.2.3 && < 1.4
    , reflex-vty >= 0.3 && < 0.6
    , semialign > 1 && < 2
    , text >= 1.2 && < 2.1
    , these > 1 && < 2
    , unix >= 2.7 && < 2.9
    , vty >=5.21 && <5.39
  hs-source-dirs: src
  default-language: Haskell2010
  ghc-options: -Wall

executable reflex-ghci
  hs-source-dirs: src-bin
  main-is: ghci.hs
  build-depends:
      base
    , optparse-applicative >= 0.14.0 && < 0.19
    , process
    , reflex
    , reflex-ghci
    , reflex-vty
    , reflex-process
    , text
    , vty
  autogen-modules: Paths_reflex_ghci
  other-modules: Paths_reflex_ghci
  ghc-options: -threaded -rtsopts
  default-language: Haskell2010

test-suite test
  type: exitcode-stdio-1.0
  main-is: test.hs
  hs-source-dirs: tests
  build-depends:
      base
    , bytestring
    , containers
    , directory
    , filepath
    , process
    , reflex
    , reflex-ghci
    , reflex-process
    , temporary >= 1.3 && < 1.4
  ghc-options: -threaded -rtsopts -Wall
  default-language: Haskell2010

source-repository head
  type: git
  location: https://github.com/reflex-frp/reflex-ghci
